# tcom

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGES  CMakeLists.txt  LICENSE  README
demos/: chart.tcl  events.tcl  excel.tcl  sendkeys.tcl
doc/: Makefile  article2html.xsl  refentry2html.xsl  server.html  server.xml  tcom.n.html  tcom.n.xml  xslt.tcl
lib/Banking/: Banking.tlb  pkgIndex.tcl  server.itcl  server.tcl
lib/TclScript/: TclScript.itcl  TclScript.tlb  pkgIndex.tcl  register.tcl  unregister.tcl
lib/tcom/: pkgIndex.tcl  tcom.tcl
samples/: chart.tcl  events.tcl  excel.tcl  sendkeys.tcl
samples/Banking/: Banking.idl  client.tcl
src/: .gitignore  ActiveScriptError.cpp  ActiveScriptError.h  Arguments.cpp  Arguments.h  CMakeLists.txt  ComModule.cpp  ComModule.h  ComObject.cpp  ComObject.h  ComObjectFactory.cpp  ComObjectFactory.h  DispatchAdapter.cpp  DispatchAdapter.h  DispatchImpl.cpp  DispatchImpl.h  Extension.cpp  Extension.h  HandleSupport.cpp  HandleSupport.h  HashTable.h  InterfaceAdapter.cpp  InterfaceAdapter.h  InterfaceAdapterVtbl.cpp  Makefile  NativeValue.cpp  NativeValue.h  Reference.cpp  Reference.h  RegistryKey.cpp  RegistryKey.h  Singleton.h  SupportErrorInfo.cpp  SupportErrorInfo.h  TclInterp.cpp  TclInterp.h  TclModule.cpp  TclModule.h  TclObject.cpp  TclObject.h  (+46 more)
template/include/: version.h
tests/: all.tcl  array.test  eval.test  foreach.test  namedarg.test  ref.test
